--- a/index.html
+++ b/index.html
@@ -48,6 +48,26 @@
                             <div class="boxes">box</div>
                             <div class="boxes">box</div>
                             <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
+                            <div class="boxes">box</div>
                         </div>
                     </div>
                 </div>
