--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<header>
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" >
-</head>
+</header>
 
 <body>
     <div id="container">
-        <div id="head">Etch-a-Sketch!</div>
+        <div id="header">Etch-a-Sketch!</div>
         <div id="content">
-            <div id="mainContent">
-                <div class="menu">
-                    <div class="menu content">
-                        <div class="color">
+            <div id="content1">
+                <div class="menu_decoration">
+                    <div class="menu">
+                        <div class="color_box">
                             <div style="margin: 0 auto;">Color</div>
-                            <div class="containerdiv">
-                                <input id="colorPicker" type="color" value="#333333"></input>
+                            <div class="content_container">
+                                <input id="color_selector" type="color" value="#333333"></input>
                             </div>
                         </div>
-                        <div class="gridEditor">
+                        <div class="grid_box">
                             <div style="margin: 0 auto;">Grid</div>
-                            <div class="containerdiv">
-                                <input id="gridSelector" type="range"></input>
+                            <div class="content_container">
+                                <input id="grid_selector" type="range"></input>
                                 <div>16x16</div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="grid">
-                    <div class="grid title">Grid Square</div>
-                    <div class="grid space">
-                        <div class="blockgrid">
+                    <div class="grid_title">Grid Square</div>
+                    <div class="grid_space">
+                        <div class="grid_screen">
                             <div class="boxes">box</div>
                             <div class="boxes">box</div>
                             <div class="boxes">box</div>
