Made sure the UI is interactive and accessible across all platform
1. Added color picker
2. Added grid selector
3. Added grid reset and disable grid border button
4. Made sure the grid works

--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
                         <div class="grid_box">
                             <div style="margin: 0 auto;">Grid</div>
                             <div class="content_container">
-                                <input id="grid_selector" type="range"></input>
-                                <div>16x16</div>
+                                <input id="grid_selector" type="range" value="1" max="100" min="1"></input>
+                                <div id="grid_shower">1x1</div>
                             </div>
+                        </div>
+                        <div class="button_container">
+                            <button id="reset" type="button">
+                                Reset
+                            </button>
+                            <button id="grid" type="button">
+                                Disable Grid
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -32,41 +40,6 @@
                     <div class="grid_title">Grid Square</div>
                     <div class="grid_space">
                         <div class="grid_screen">
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
-                            <div class="boxes">box</div>
                             <div class="boxes">box</div>
                         </div>
                     </div>
